--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,23 +17,24 @@ spring.mvc.favicon.enabled = true
 
 #显示 hibernate运行的 sql 语句
 
-spring.jpa.show-sql=false
-
+spring.jpa.show-sql=true
 org.apache.tomcat.util.buf.UDecoder.ALLOW_ENCODED_SLASH=true
 
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#hibernate 方言设置
+#hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
 # JavaMailSender 邮件发送的配置
 
 spring.mail.host=smtp.qq.com
 
-spring.mail.username=462946599@qq.com
+spring.mail.username=10000@qq.com
 
 #QQ邮箱的授权码
 
-spring.mail.password=klrbkddtfsnabicg
+spring.mail.password=10000
 
 spring.mail.properties.mail.smtp.auth=true
 
