添加get() set()方法

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-
+logging.level.cyz.ink.portfolio=trace
+logging.file=springboot.log
+logging.pattern.file=%d{yyyy-MM-dd}------\u54C8\u54C8\u54C8\uFF0C\u770B\u6211\uFF0C\u770B\u6211------[%thread] ------%-5level ***%logger{50} **** %msg%n
 #database
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/portfolio?characterEncoding=UTF-8
-
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/portfolio?characterEncoding=UTF-8
+#8.0.16
+spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 
-spring.datasource.password=admin
+spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
