--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 
 #database
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/portfolio?characterEncoding=UTF-8
-
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/portfolio?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 
 spring.datasource.password=admin
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto = none
 
