增加管理员界面

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,12 +11,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = none
 
 spring.mvc.favicon.enabled = true
-
+server.port=8000
 
 
 #显示 hibernate运行的 sql 语句
-
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 org.apache.tomcat.util.buf.UDecoder.ALLOW_ENCODED_SLASH=true
 
 #hibernate 方言设置
