使用onetoone onetomany实现增删改查

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,16 +7,14 @@ spring.datasource.username=root
 spring.datasource.password=admin
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.favicon.enabled = true
 server.port=8000
 
 
 #显示 hibernate运行的 sql 语句
-spring.jpa.show-sql=false
-org.apache.tomcat.util.buf.UDecoder.ALLOW_ENCODED_SLASH=true
+spring.jpa.show-sql=true
 
 #hibernate 方言设置
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
